# ode-build

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENCE  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  SUPPORT.md  lgtm.yml  requirements.txt  run.py  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  documentation.md  feature_change.md  performance_improvement.md
.github/codeql/: codeql-config.yml
.github/workflows/: cloc.yml  codeql-analysis.yml  deploy.yml  greetings.yml  main.yml
components/benchmark/: build.py  clone.py
components/clara/: build.py  clone.py
components/cmake/: __init__.py  build.py  clone.py
components/glad/: build.py  clone.py
components/googletest/: build.py  clone.py
components/llvm/: build.py  clone.py
components/lua/: build.py  clone.py
components/ninja/: build.py  clone.py
components/sdl/: build.py  clone.py
components/spdlog/: build.py  clone.py
components/stb_image/: build.py  clone.py
couplet_composer/: __init__.py  __main__.py  __version__.py  _clone.py  args.py  args_parser.py  binary_dependency.py  bootstrap.py  build_directory.py  clone.py  component_set_up.py  composing_mode.py  composing_runner.py  config.py  configuring_mode.py  configuring_runner.py  core.py  dependency.py  dependency_set.py  flags.py  invocation.py  modes.py  preset.py  preset_mode.py  preset_runner.py  project.py  run.py  runner.py  runner_proper.py  set_up.py  target.py  tool.py  toolchain.py  tools.json
couplet_composer/clone/: clone.py  tools.py
couplet_composer/compose/: libraries.py
couplet_composer/dependencies/: _common.py  benchmark.py  clara.py  cxxopts.py  glad.py  googletest.py  lua.py  sdl.py  spdlog.py  stb_image.py
couplet_composer/dependencies/lua/: CMakeLists.txt
couplet_composer/github/: __init__.py  _api_v3.py  _api_v4.py  access.py  release.py  repository.py  tag.py
couplet_composer/github/graphql/: github_asset.graphql  github_repository.graphql  github_tag.graphql
couplet_composer/products/: cmake.py  ninja.py  product.py
couplet_composer/support/: archive_action.py  build_variant.py  cmake_generator.py  cmake_generators.py  command_line.py  compiler_toolchains.py  cpp_standard.py  dependency_data.py  dependency_install_information.py  environment.py  file_paths.py  github_data.py  install_status.py  mode_names.py  platform_names.py  preset.py  presets.py  presets_copy.py  project_libraries.py  project_names.py  project_values.py  run_mode.py  system.py  tar_action.py  tool_data.py  tool_install_information.py  toolchain.py  tooldata.py  values.py  variables.py
couplet_composer/support/dependencies/: benchmark.py  glad.py  lua.py  sdl.py
couplet_composer/support/tools/: cmake.py  doxygen.py  git.py  llvm.py  make.py  (+1 more)
couplet_composer/tools/: clang.py  clang_apply_replacements.py  clang_tidy.py  clangxx.py  cmake.py  llvm.py  ninja.py
couplet_composer/util/: __init__.py  build_util.py  cache.py  cache_util.py  date.py  diagnostics.py  formatter.py  http.py  mapping.py  shell.py  target.py  where.py  which.py  xcrun.py
docs/: CONFIGURATION.md
github/: __init__.py  _util.py  _v4_util.py  asset.py  release.py  tag.py  v4_util.py
graphql/: github_asset.graphql  github_repository.graphql  github_url.graphql
ode_composer/: __init__.py  __version__.py  clone.py
src/: bootstrap
src/common/: __init__.py  clone.py  component_set_up.py  set_up.py
src/github/: github.py  tag.py  v4_util.py
src/support/: __init__.py  arguments.py  data.py  defaults.py  variables.py
src/util/: __init__.py  date.py  diagnostics.py  mapping.py  reflection.py  target.py  toolchain.py  which.py  workspace.py  xcrun.py
support/: __init__.py  arguments.py  data.py  defaults.py  presets.py  values.py  variables.py
support/argparse/: actions.py  parser.py  types.py
test/: __init__.py
test/util/: test_date.py  test_mapping.py  test_shell.py
tests/util/: test_date.py  test_mapping.py  test_shell.py  test_target.py  test_which.py  test_xcrun.py
unchecked/clone/: clone.py
unchecked/products/: __init__.py
unchecked/support/: toolchain.py  values.py
unchecked/util/: xcrun.py
util/: __init__.py  binaries.py  cache_util.py  cmake.py  date.py  diagnostics.py  http.py  mapping.py  reflection.py  shell.py  sources.py  target.py  toolchain.py  which.py  workspace.py  xcrun.py
utils/: build-presets.ini  build-script  clean-script  github_tag.graphql  github_url.graphql
utils/build_utils/: __init__.py  cache_util.py  diagnostics.py  http_stream.py  mapping.py  presets.py  reflection.py  reflection_old.py  shell.py  targets.py  toolchain.py  which.py  workspace.py  xcrun.py
utils/checkout/: __init__.py  checkout.py  github.py  github_asset.py  github_master.py  github_tag.py  github_v4_util.py
utils/products/: __init__.py
utils/script_support/: data.py  defaults.py  driver_arguments.py  product_config.py  product_mapping.py  variables.py
(+40 files in other folders)
