# Copyright (c) 2019 Antti Kivi
# Licensed under the MIT License

cmake_minimum_required(VERSION 2.8.12)
project(lua)

set(CMAKE_C_FLAGS "-std=gnu99 -O2 -Wall ${CMAKE_C_FLAGS}")
# set(CMAKE_C_FLAGS "-std=gnu99 -O2 -Wall -Wextra ${CMAKE_C_FLAGS}")
add_definitions(-DLUA_COMPAT_5_2)

set(LUA_SOURCES)
set(LUA_INCLUDES)

include_directories(src)

list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lapi.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lcode.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lctype.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/ldebug.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/ldo.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/ldump.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lfunc.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lgc.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/llex.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lmem.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lobject.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lopcodes.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lparser.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lstate.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lstring.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/ltable.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/ltm.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lundump.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lvm.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lzio.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lauxlib.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lbaselib.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lbitlib.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lcorolib.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/ldblib.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/liolib.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lmathlib.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/loslib.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lstrlib.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/ltablib.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lutf8lib.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/loadlib.c)
list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/linit.c)

list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/lua.c)

list(APPEND LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/luac.c)

list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lmem.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/llimits.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/luaconf.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lzio.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lgc.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lualib.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/ldebug.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lcode.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lapi.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/ldo.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/llex.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/ltm.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lparser.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lobject.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lstate.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lopcodes.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lauxlib.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lvm.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lstring.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lfunc.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lprefix.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/ltable.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lctype.h)
list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lundump.h)

list(APPEND LUA_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/lua.h)

add_library(lua STATIC ${LUA_SOURCES})

set_target_properties(lua PROPERTIES PUBLIC_HEADER "${LUA_INCLUDES}")

install(TARGETS lua
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_PREFIX}/include
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

message(STATUS "The install prefix is set to ${CMAKE_INSTALL_PREFIX}")
message(STATUS "The C compiler flag is set to ${CMAKE_C_COMPILER}")
message(STATUS "The C compiler environment variable is set to $ENV{CC}")
